--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     "@hmcts/properties-volume": "^1.2.0",
     "@types/config": "^3.3.5",
     "@types/cookie-parser": "^1.4.8",
-    "@types/csurf": "^1.11.5",
     "@types/es6-promisify": "^6.0.4",
     "@types/express": "^5.0.0",
     "@types/glob": "^8.1.0",
     "@types/helmet": "^0.0.48",
-    "@types/i18next": "^13.0.0",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^18.19.67",
+    "@types/node": "^18.19.70",
     "@types/nunjucks": "^3.2.6",
     "@types/require-directory": "^2.1.6",
     "@types/serve-favicon": "^2.5.7",
@@ -50,20 +49,24 @@
     "cacache": "^19.0.1",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
-    "csurf": "^1.11.0",
+    "csrf-csrf": "^3.1.0",
     "express": "4.21.2",
     "express-nunjucks": "^3.1.2",
+    "glob": "^9.0.0",
     "glob-parent": "6.0.2",
     "govuk-frontend": "^4.9.0",
     "helmet": "^4.6.0",
-    "http-proxy-middleware": "^3.0.3",
+    "http-proxy-middleware": "^2.0.7",
     "i18next": "^21.10.0",
     "i18next-http-middleware": "^3.7.0",
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "node-gyp": "^11.0.0",
+    "npmlog": "^7.0.1",
     "nunjucks": "^3.2.4",
     "require-directory": "^2.1.1",
+    "rimraf": "^4.0.0",
     "serve-favicon": "^2.5.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -79,6 +82,7 @@
     "@types/cucumber": "^7.0.3",
     "@types/jest": "^29.5.14",
     "@types/jest-when": "^3.5.5",
+    "@types/npmlog": "^7",
     "@types/supertest": "^2.0.16",
     "@types/webpack-dev-middleware": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -116,7 +120,7 @@
     "style-loader": "^4.0.0",
     "superagent": "^10.1.1",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.1",
+    "ts-loader": "^9.5.2",
     "tslint": "^6.1.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^4.10.0",
