--- a/package.json
+++ b/package.json
@@ -128,26 +128,27 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
-    "sass-lint/merge": ">=2.1.1",
-    "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
-    "@hmcts/nodejs-logging/moment": ">=2.29.4",
-    "qs": ">=6.5.3",
-    "json5": ">=2.2.2",
-    "minimist": ">=1.2.6",
-    "semver": ">=7.5.2",
-    "follow-redirects": ">=1.15.6",
-    "word-wrap": ">=1.2.4",
+    "sass-lint/merge": "^2.1.1",
+    "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0",
+    "@hmcts/nodejs-logging/moment": "^2.29.4",
+    "qs": "^6.5.3",
+    "json5": "^2.2.2",
+    "minimist": "^1.2.6",
+    "semver": "^7.5.2",
+    "follow-redirects": "^1.15.6",
+    "word-wrap": "^1.2.4",
     "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz",
-    "axios": ">=1.7.7",
-    "axios>follow-redirects": ">=1.15.4",
-    "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
-    "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
+    "axios": "^1.7.7",
+    "axios>follow-redirects": "^1.15.4",
+    "http-proxy-middleware>http-proxy>follow-redirects": "^1.15.4",
+    "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": "^1.15.4",
     "express": "4.21.2",
-    "micromatch": ">=4.0.8",
-    "tar": ">=6.2.1",
-    "braces": ">=3.0.3",
-    "cookie": ">=0.7.0",
-    "@hmcts/info-provider/path-to-regexp": "0.1.12"
+    "micromatch": "^4.0.8",
+    "tar": "^6.2.1",
+    "braces": "^3.0.3",
+    "cookie": "^0.7.0",
+    "@hmcts/info-provider/path-to-regexp": "0.1.12",
+    "cacache": "^19.0.1"
   },
   "packageManager": "yarn@4.6.0"
 }
