--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "node-gyp": "^11.0.0",
     "npmlog": "^7.0.1",
     "nunjucks": "^3.2.4",
     "require-directory": "^2.1.1",
@@ -148,7 +147,8 @@
     "braces": "^3.0.3",
     "cookie": "^0.7.0",
     "@hmcts/info-provider/path-to-regexp": "0.1.12",
-    "cacache": "^19.0.1"
+    "cacache": "^19.0.1",
+    "node-gyp": "^11.0.0"
   },
   "packageManager": "yarn@4.6.0"
 }
