--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
+    "@babel/runtime": "7.26.10",
     "sass-lint/merge": "^2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0",
     "@hmcts/nodejs-logging/moment": "^2.29.4",
